# TFM_Secure_FL

./: .gitignore  Readme.md  certificate.conf  generate_cert.sh  generate_keys.sh  pyproject.toml  requirements.txt
certificates_tls/: ca.crt  ca.key  ca.srl  server.csr  server.key  server.pem
keys/: client_credentials_1  client_credentials_1.pub  client_credentials_2  client_credentials_2.pub  client_credentials_3  client_credentials_3.pub  client_credentials_4  client_credentials_4.pub  client_public_keys.csv
tfmapp/: __init__.py
tfmapp/images_federation/: client_app.py  server_app.py  strategy.py
tfmapp/tabular_federation/: client_app.py  server_app.py  strategy.py
tfmapp/text_federation/: client_app.py  server_app.py  strategy.py
wandb/run-20250313_185320-r46p3omz/: run-r46p3omz.wandb
wandb/run-20250318_161306-umvl3puh/: run-umvl3puh.wandb
wandb/run-20250318_200834-ne8qmuym/: run-ne8qmuym.wandb
wandb/run-20250318_201639-vmndkh72/: run-vmndkh72.wandb
wandb/run-20250319_172933-5ppbt04m/: run-5ppbt04m.wandb
wandb/run-20250319_174228-5nan4mp1/: run-5nan4mp1.wandb
wandb/run-20250319_182635-pp2lhq7y/: run-pp2lhq7y.wandb
wandb/run-20250319_185850-nzhcpjuu/: run-nzhcpjuu.wandb
wandb/run-20250319_204428-cdudiqx4/: run-cdudiqx4.wandb
wandb/run-20250319_210049-7zlbgepx/: run-7zlbgepx.wandb
wandb/run-20250319_212044-0kdvwekg/: run-0kdvwekg.wandb
wandb/run-20250319_212239-tens4gik/: run-tens4gik.wandb
wandb/run-20250319_213102-ffvpuksj/: run-ffvpuksj.wandb
wandb/run-20250319_213514-u6m3qibx/: run-u6m3qibx.wandb
wandb/run-20250319_213628-sbcig9mg/: run-sbcig9mg.wandb
wandb/run-20250420_114405-kjnph1wb/: run-kjnph1wb.wandb
wandb/run-20250420_120052-lr1eds30/: run-lr1eds30.wandb
wandb/run-20250420_120359-orzn674e/: run-orzn674e.wandb
wandb/run-20250420_120606-k2auon6o/: run-k2auon6o.wandb
wandb/run-20250420_121004-r40ip20j/: run-r40ip20j.wandb
(+560 files in other folders)
